2008-10-21 Quentin Mathe <qmathe@club-internet.fr>

	* COMetadataServer.m:
	(-setUpDBWithURL:):
	(-setURL:forUUID:withObjectVersion:type:isGroup:timestamp:inContextUUID:):
	Modified to store UUID as PostgreSQL UUID type instead of text type.

2008-10-20 Quentin Mathe <qmathe@club-internet.fr>

	Initial work on a strict ownership of core objects by object contexts. 
	Added a contextUUID column to the UUID table of the metadata DB.
	* Headers/COObjectContext.h:
	* COObjectContext.m: 
	(-insertObject:): Added.
	(-logRecord:objectVersion:timestamp:shouldIncrementContextVersion:): Modifed 
	to only do an insert in the metadata DB on the version 0 of an object. Also 
	updated to call the renamed insert method of COMetadataServer.
	* Headers/COMetadataServer.h:
	* COMetadataServer.m:
	(-setUpDBWithURL:): Modified the DB schema to include a contextUUID column 
	in the main table.
	(-setURL:forUUID:withObjectVersion:type:isGroup:timestamp:): 
	Modified to include take an extra inContextUUID: parameter.
	* COObject.m (-tryStartPersistencyIfInstanceOfClass:): Updated to call 
	-insertObject:.

2008-10-15 Quentin Mathe <qmathe@club-internet.fr>

	* Headers/COObjectContext.h:
	* COObjectContext.m: 
	(-loadAllObjects, allObjectUUIDsMatchingContextVersion:, 
	-commitMergeOfInstance:forObject:): Added. 
	(-replaceObject:byObject:collectAllErrors:): Extracted the code that takes 
	care of taking a snaphot to record an object replacement into 
	-commitMergeOfInstance:forObject:.
	* COObjectContext+GraphRollback.m:
	(-lastObjectVersionForUUID:): Added.
	(-objectForUUID:version:): Modified to call 
	-commitMergeOfInstance:forObject:.
	(-_rollbackToVersion:): Improved to discard future objects when rolling back 
	the context to an old version. Before they were kept as cached objects. 
	Also improved to avoid the loading of objects whose versions haven't changed 
	between the target version and the current one.
	(-findAllObjectVersionsMatchingContextVersion:): Fixed to scan all the 